# glsl_learning

./: CMakeLists.txt  main.cpp  setup.cpp  setup.h  vertex_buffer_creator.cpp  vertex_buffer_creator.h
GL/include/glad/: glad.h
GL/src/: glad.c
scenes/: fragment_circle.cpp  spinning_triangle.cpp  tumble_torus.cpp
shaders/: basic.frag.glsl  basic.vert.glsl  diffuse.vert.glsl  glow.frag.glsl  phong.vert.glsl  rotate.vert.glsl  texture.vert.glsl  two_side_phong.vert.glsl  two_side_phong_discard.vert.glsl  two_sided_basic.frag.glsl  two_sided_discard.frag.glsl
